css/main.css
    body {
        color: snow;
        font-family: 'Raleway', serif;
        background-image: url(http://millhousenchurch.com/img/content_bg.jpg);
        width: 100vw;
        overflow-x: hidden;
    }
    
    nav {
        background-image: url(http://millhousenchurch.com/img/content_bg.jpg);
        border: 0px 0px 0px 0px;
        width: 100vw;
    }
    
    .etched-pattern {
        width: 100vw;
    }
    
    .branding-header {
        background-color: #080808;
        color: #9D9D9D;
        width: 100vw;
        margin: 0px;
    }
    
    .brand {
        height: 150px;
        display: block;
        margin: auto;
    }
    
    .brand-txt {
        display: flex;
        text-align: center;
        justify-content: center;
        flex-direction: column;
        height: 150px;
        color: white;
    }
    
    .brand-txt h1 {
        font-size: 2.3em;
        margin-top: 10px;
    }
    
    .brand-txt h2 {
        font-size: 1.6em;
    }
    
    .brand-right {
        padding-right: 0;
    }
    
    .brand-left {
        padding-left: 0;
    }
    
    .etched-pattern {
        background-image: url(http://millhousenchurch.com/img/content_bg.jpg);
        width: 100%;
        height: 100%
    }
    
    .jagged-pattern {
        position: absolute;
        display: block;
        top: -5px;
        left: 0;
        content: '';
        width: 100%;
        height: 5px;
        background: url(http://millhousenchurch.com/img/footer_bg.png) center top repeat-x;
    }
    
    .quick-info {
        display: flex;
        text-align: center;
        justify-content: center;
        flex-direction: column;
        height: 150px;
    }
    
    .quick-info li {
        list-style-type: none;
    }
    
    .quick-info li a {
        color: #9D9D9D;
    }
    /* Sticky footer styles
-------------------------------------------------- */
    
    html {
        position: relative;
        min-height: 100%;
    }
    
    body {
        /* Margin bottom by footer height */
        margin-bottom: 40px;
    }
    
    .footer {
        position: absolute;
        bottom: 0;
        width: 100vw;
        /* Set the fixed height of the footer here */
        height: 40px;
        background-color: #080808;
        color: #9D9D9D;
    }
    
    .text-muted {
        margin-top: 10px;
    }
    
    .upcoming-events {
        top: 0;
        left: 0;
        width: 20vw;
    }
    
    @media screen {
        body>div#left-sidebar {
            position: fixed;
        }
    }
    
    .list1 {
        position: relative;
        display: block;
        width: 100%;
        padding-left: 15px;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        text-shadow: rgba(0, 0, 0, 0.75) 1px 1px 5px;
        -webkit-border-radius: 1px;
        -moz-border-radius: 1px;
        border-radius: 1px;
        border: 1px solid transparent;
        background: #00679a;
        list-style: none;
    }
    
    .list1 li {
        position: relative;
        border: 1px solid #43a9dd;
        border-bottom-color: transparent;
        margin: 0px 0px 1px 0px;
        padding: 6px 9px 9px 9px;
        background-color: #0d87c4;
        background-image: -moz-linear-gradient(top, #057db9, #1996d5);
        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#057db9), to(#1996d5));
        background-image: -webkit-linear-gradient(top, #057db9, #1996d5);
        background-image: -o-linear-gradient(top, #057db9, #1996d5);
        background-image: linear-gradient(to bottom, #057db9, #1996d5);
        background-repeat: repeat-x;
        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff057db9', endColorstr='#ff1996d5', GradientType=0);
    }
    
    .list1 li:first-child {
        margin-top: 0px;
        background-color: #0981be;
        background-image: -moz-linear-gradient(top, #057db9, #0e88c5);
        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#057db9), to(#0e88c5));
        background-image: -webkit-linear-gradient(top, #057db9, #0e88c5);
        background-image: -o-linear-gradient(top, #057db9, #0e88c5);
        background-image: linear-gradient(to bottom, #057db9, #0e88c5);
        background-repeat: repeat-x;
        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff057db9', endColorstr='#ff0e88c5', GradientType=0);
    }
    
    .list1 li:first-child + li {
        background-color: #128ecb;
        background-image: -moz-linear-gradient(top, #0e88c5, #1996d5);
        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0e88c5), to(#1996d5));
        background-image: -webkit-linear-gradient(top, #0e88c5, #1996d5);
        background-image: -o-linear-gradient(top, #0e88c5, #1996d5);
        background-image: linear-gradient(to bottom, #0e88c5, #1996d5);
        background-repeat: repeat-x;
        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff0e88c5', endColorstr='#ff1996d5', GradientType=0);
    }
    
    .list1 li:first-child + li + li {
        background-color: #1490ce;
        background-image: -moz-linear-gradient(top, #1996d5, #0d87c4);
        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1996d5), to(#0d87c4));
        background-image: -webkit-linear-gradient(top, #1996d5, #0d87c4);
        background-image: -o-linear-gradient(top, #1996d5, #0d87c4);
        background-image: linear-gradient(to bottom, #1996d5, #0d87c4);
        background-repeat: repeat-x;
        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff1996d5', endColorstr='#ff0d87c4', GradientType=0);
    }
    
    .list1 li:first-child + li + li + li {
        background-color: #0a83c0;
        background-image: -moz-linear-gradient(top, #0d87c4, #057db9);
        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d87c4), to(#057db9));
        background-image: -webkit-linear-gradient(top, #0d87c4, #057db9);
        background-image: -o-linear-gradient(top, #0d87c4, #057db9);
        background-image: linear-gradient(to bottom, #0d87c4, #057db9);
        background-repeat: repeat-x;
        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff0d87c4', endColorstr='#ff057db9', GradientType=0);
    }
    
    .list1 li.last {
        border-bottom-color: #43a9dd;
        padding-bottom: 22px;
        margin-bottom: 0;
    }
    
    .list1 li div {
        overflow: hidden;
    }
    
    .list1 li div h3 {
        color: #ffffff;
        margin: 9px 0 7px;
    }
    
    .list1 li div h3 a {
        color: inherit;
    }
    
    .list1 li div h3 a:hover {
        color: #000000;
    }
    
    .list1 li div p {
        color: #c8c8c8;
        padding: 0;
        margin: 0;
    }
    
    @media screen and (max-width: 991px) {
        .brand-right {
            display: none;
        }
        .upcoming-events {
            width: 100%;
        }
        .brand-txt {
            margin-left: 10px;
            margin-right: 10px;
        }
    }
    /*Business Card Css */
    
    .business-card {
        border: 1px solid #cccccc;
        background: #f8f8f8;
        padding: 10px;
        border-radius: 4px;
        margin-bottom: 10px;
        color: black;
    }
    
    .profile-img {
        height: 120px;
        background: white;
    }
    
    .job {
        color: #666666;
        font-size: 17px;
    }
    
    .mail {
        color: #666666;
        font-size: 16px;
    }
    
    @media screen and (max-width: 1200px) {
        .profile-img {
            height: 100px;
        }
        .job {
            font-size: 15px;
        }
        .mail {
            font-size: 14px;
        }
        .media-heading {
            font-size: 25px;
        }
    }
    
    @media (min-width: 1200px) {
        .container {
            width: 85vw;
        }
    }
    
    @media screen and (max-width: 445px) {
        .media-body,
        .media-left {
            display: block;
            width: 100%;
        }
        .profile-img {
            margin: 0 auto;
        }
        .profile-img,
        .job,
        .mail,
        .media-heading {
            text-align: center;
        }
    }
    
    .page-content {
        margin-left: 20vw;
        padding-left: 10px;
    }
    
    #random-photo {
        padding: 10px;
    }
    
    .fa-google,
    .fa-facebook-square {
        color: snow;
        padding: 10px;
    }
    
    .google-maps {
        position: relative;
        padding-bottom: 93vh; // (450 ÷ 500 = 0.9 = 90%)
        height: 0;
        overflow: hidden;
    }
    
    .google-maps iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 90vh;
    }
    
    .contact-columns {
        text-align: center;
        width: 100%;
    }
    
    .contact-circle {
        width: 140px;
        height: 140px;
        -moz-border-radius: 70px;
        -webkit-border-radius: 70px;
        border-radius: 70px;
        background-color: #080808;
        border: 2px solid snow;
        position: relative;
        display: table;
        margin: 0 auto;
    }
    
    .contact-icon {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

